# SincDVR

./: .gitignore  CMakeLists.txt  DVR  LICENSE  README.md
include/: BasicSet.h  FunctionLib.h  fileprint.h
input/: harmonic.txt  sample.txt
src/: BasicDef.cpp  BasicSet.cpp  FunctionLib.cpp  LogTailer.cpp  Tailor.jl  fileprint.cpp  main.cpp
